<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">用户行为还原引擎</string>
    <string name="icon_description">icon</string>
    <string name="done_string">确定</string>
    <string name="cancel_string">取消</string>
    <string name="survey_dialog_title">【问卷调查】此问卷共&lt;%1$d&gt;题，当前正在回答第&lt;%2$d&gt;题</string>
    <string name="no_survey_again">请勿再次向我发起问卷</string>
    <string name="please_answer">请选择或者回答问题</string>
    <string name="please_input_number">请输入正确的手机号码</string>
    <string name="setting_title">参数设置</string>
    <string name="boot">是否开机自启</string>
    <string name="running_back">是否后台运行</string>
    <string name="yes_string">是</string>
    <string name="no_string">否</string>
    <string name="image_space">设置截图空间大小(存储卡的百分比)</string>
    <string name="image_space_warn">此值只能为在0~99的整数，请重新输入</string>
    <string name="screencap_frequency">截屏频率（单位：帧/秒）</string>
    <string name="join_survey">是否参与问卷调查</string>
    <string name="input_mobile_num">请输入本机手机号码</string>
    <string name="start_time">开始时间：</string>
    <string name="end_time">结束时间：</string>
    <string name="date_string">日期：</string>
    <string name="time_string">时间：</string>
    <string name="notrigger">无条件触发</string>
    <string name="havetrigger">有条件触发</string>
    <string name="process_name">进程名：</string>
    <string name="create_task">生成任务</string>
    <string name="query_task">查询任务</string>
</resources>
